--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
+                        <a href="#experiences" class="nav-link"><span data-hover="Experiences">Experiences</span></a>
                     </li>
                 </ul>
 
@@ -136,7 +136,7 @@
     </section>
 
     <!-- FEATURES -->
-    <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
+    <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="experiences">
         <div class="container">
             <div class="row">
 
